[package]
name = "unic-char"
version = "0.7.0"
authors = ["The UNIC Project Developers"]
repository = "https://github.com/behnam/rust-unic/"
license = "MIT/Apache-2.0"
description = "UNIC — Unicode Character Tools"
keywords = ["text", "unicode", "utilities"]
categories = ["internationalization", "text-processing", "parsing"]
readme = "README.md"

# No tests/benches that depends on /data/
exclude = []

[dependencies]
unic-char-basics = { path = "basics/", version = "0.7.0" }
unic-char-property = { path = "property/", version = "0.7.0" }
unic-char-range = { path = "range/", version = "0.7.0" }

[features]
default = []
std = ["unic-char-range/std"]
unstable = [
    "unic-char-basics/unstable",
    "unic-char-property/unstable",
    "unic-char-range/unstable",
]

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "behnam/rust-unic" }
is-it-maintained-open-issues = { repository = "behnam/rust-unic" }
appveyor = { repository = "behnam/rust-unic", branch = "master", service = "github" }
travis-ci = { repository = "behnam/rust-unic", branch = "master" }
